--- a/app/src/main/res/layout/activity_ninth.xml
+++ b/app/src/main/res/layout/activity_ninth.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".second"
+    tools:context=".ninth"
     android:background="#D7C0EC"
     >
 
@@ -49,7 +49,6 @@
         app:layout_constraintStart_toEndOf="@+id/arrow_home"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <androidx.cardview.widget.CardView
         android:id="@+id/title"
         android:layout_width="match_parent"
@@ -75,7 +74,7 @@
             android:paddingTop="17dp"
             android:paddingRight="10dp"
             android:paddingBottom="17dp"
-            android:text="2. 아이유의 데뷔일짜는?"
+            android:text="9. 곡 '자장가'의 모티브가 된 작품은?"
             android:textColor="@color/white"
             android:textSize="29dp"
             android:textStyle="bold"
@@ -119,7 +118,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="20dp"
-                    android:text="1993년 5월 16일"
+                    android:text="아무도 없는 곳"
                     android:textSize="27dp" />
 
                 <RadioButton
@@ -128,7 +127,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="20dp"
-                    android:text="1993년 9월 18일"
+                    android:text="보보경심 려 - 달의 연인"
                     android:textSize="27dp" />
 
                 <RadioButton
@@ -137,7 +136,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="20dp"
-                    android:text="2008년 9월 18일"
+                    android:text="밤을 걷다"
                     android:textSize="27dp" />
 
                 <RadioButton
@@ -146,7 +145,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:minHeight="48dp"
-                    android:text="2008년 5월 16일"
+                    android:text="나의 아저씨"
                     android:textSize="27dp" />
             </RadioGroup>
 
