--- a/app/src/main/res/layout/activity_problem_list.xml
+++ b/app/src/main/res/layout/activity_problem_list.xml
@@ -31,6 +31,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/adView"
         />
 
     <com.google.android.gms.ads.AdView
