--- a/app/src/main/res/layout/activity_fourty.xml
+++ b/app/src/main/res/layout/activity_fourty.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".thirtiyThird"
+    tools:context=".fourty"
     android:background="#D7C0EC"
     >
 
@@ -75,7 +75,7 @@
             android:paddingTop="17dp"
             android:paddingRight="10dp"
             android:paddingBottom="17dp"
-            android:text="33. 아이유가 좋아하는 디즈니 캐릭터는?"
+            android:text="40. 아이유가 처음으로 기타로 연주했던 곡은?"
             android:textColor="@color/white"
             android:textSize="29dp"
             android:textStyle="bold"
@@ -119,7 +119,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="20dp"
-                    android:text="라푼젤"
+                    android:text="officially missing you - 타미야"
                     android:textSize="27dp" />
 
                 <RadioButton
@@ -128,7 +128,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="20dp"
-                    android:text="모아나"
+                    android:text="거짓말 - 빅뱅"
                     android:textSize="27dp" />
 
                 <RadioButton
@@ -137,7 +137,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="20dp"
-                    android:text="엘사"
+                    android:text="Gee - 소녀시대"
                     android:textSize="27dp" />
 
                 <RadioButton
@@ -146,7 +146,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:minHeight="48dp"
-                    android:text="자스민"
+                    android:text="Loving you - 미니 리퍼턴"
                     android:textSize="27dp" />
             </RadioGroup>
 
