--- a/app/src/main/res/layout/activity_thirty_ninth.xml
+++ b/app/src/main/res/layout/activity_thirty_ninth.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".thirtiyThird"
+    tools:context=".thirtyNinth"
     android:background="#D7C0EC"
     >
 
@@ -75,7 +75,7 @@
             android:paddingTop="17dp"
             android:paddingRight="10dp"
             android:paddingBottom="17dp"
-            android:text="33. 아이유가 좋아하는 디즈니 캐릭터는?"
+            android:text="39. 아이유가 본인곡 이외에 출연했던\n 뮤비가 아닌것은?"
             android:textColor="@color/white"
             android:textSize="29dp"
             android:textStyle="bold"
@@ -119,7 +119,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="20dp"
-                    android:text="라푼젤"
+                    android:text="가슴이 뛴다 - 케이윌"
                     android:textSize="27dp" />
 
                 <RadioButton
@@ -128,7 +128,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="20dp"
-                    android:text="모아나"
+                    android:text="눈사람 - 정승환"
                     android:textSize="27dp" />
 
                 <RadioButton
@@ -137,7 +137,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="20dp"
-                    android:text="엘사"
+                    android:text="진실 혹은 대담 - 가인"
                     android:textSize="27dp" />
 
                 <RadioButton
@@ -146,7 +146,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:minHeight="48dp"
-                    android:text="자스민"
+                    android:text="술이 달다 - 에픽하이"
                     android:textSize="27dp" />
             </RadioGroup>
 
